@@ -15,7 +15,7 @@
 
 (* Generation of assembly code *)
 
-val fundecl: Linearize.fundecl -> unit
+val fundecl: Linearize.fundecl -> end_of_function_label:Linearize.label -> unit
 val data: Cmm.data_item list -> unit
 val begin_assembly: unit -> unit
 val end_assembly: unit -> unit
