@@ -947,7 +947,7 @@ let emit_external_symbols () =
 
 (* Emission of a function declaration *)
 
-let fundecl fundecl =
+let fundecl fundecl ~end_of_function_label =
   function_name := fundecl.fun_name;
   fastcode_flag := fundecl.fun_fast;
   tailrec_entry_point := new_label();
@@ -972,6 +972,7 @@ let fundecl fundecl =
   List.iter emit_call_gc !call_gc_sites;
   emit_call_bound_errors ();
   cfi_endproc ();
+  _label (emit_label end_of_function_label);
   begin match system with
   | S_linux_elf | S_bsd_elf | S_gnu ->
       D.type_ (emit_symbol fundecl.fun_name) "@function";
